# PhoBert-VietNamClickBait-Recognize

./: README.md  app.py  pyproject.toml  requirements.txt  train.py
notebooks/: download_dataset.ipynb  eda.ipynb
src/clickbait_detector/: __init__.py  clickbait_dataset.py  crawl_data.py  inference.py  net.py  preprocessing.py  utils.py
